[package]
name = "crdocs_app"
version = "0.1.0"
authors = ["Xavier Denis <xldenis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# tungstenite = "*"
async-std = "*"
futures = "^0.3"
async-tungstenite = "*"
tide = { version = "^0.6" }
tide-static-files = { git = "https://github.com/xldenis/tide-static-files" }
serde_json = "*"
serde = { version = "*", features = ["derive"] }
