[package]
name = "crdocs_app"
version = "0.1.0"
authors = ["Xavier Denis <xldenis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# tungstenite = "*"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
tokio-tungstenite = "*"
futures = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
env_logger = "*"
structopt = "*"
log = "*"
rand = "*"
