[package]
name = "crdocs"
version = "0.1.0"
authors = ["Xavier Denis <xldenis@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
crdts = "*"
rand = "*"
ws_stream_wasm = "*"
wasm-bindgen-futures = "0.4.8"
futures = { version = "^0.3", default-features = false }
console_error_panic_hook = { version = "0.1", optional = true }
serde = "*"
wasm-timer = "*"
serde_json = "*"
getrandom = { version = "*", features = [ "wasm-bindgen"] }
gloo-events = "*"
js-sys = "*"
derive_more = "*"
console_log = "*"
log = "*"

[dependencies.web-sys]
  version = "0.3"
  features = [
    "RtcPeerConnection",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcSdpType",
    "RtcPeerConnectionIceEvent",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcIceConnectionState",
    "RtcIceGatheringState",
    "RtcDataChannel",
    "RtcDataChannelInit",
  ]
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "^0.3"
quickcheck ="*"
quickcheck_macros = "*"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
