[package]
name = "crdocs"
version = "0.1.0"
authors = ["Xavier Denis <xldenis@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
rand = "*"
ws_stream_wasm = "*"
wasm-bindgen-futures = "0.4.8"
futures = { version = "^0.3", default-features = false }
console_error_panic_hook = { version = "0.1", optional = true }
serde = { version = "^1.0", features = ["derive"] }
wasm-timer = "*"
serde_json = "*"
getrandom = { version = "*", features = [ "wasm-bindgen"] }
gloo-events = "*"
js-sys = "*"
derive_more = "*"
console_log = "*"
log = "*"
wee_alloc = { version = "0.4.2", optional = true }


[dependencies.web-sys]
  version = "0.3"
  features = [
    "RtcPeerConnection",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcSdpType",
    "RtcPeerConnectionIceEvent",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcIceConnectionState",
    "RtcIceGatheringState",
    "RtcDataChannel",
    "RtcDataChannelInit",
    "RtcDataChannelState",
    "RtcConfiguration",
    "RtcIceServer",
    "Storage",
    "Window",
  ]

[dev-dependencies]
wasm-bindgen-test = "^0.3"
quickcheck ="*"
quickcheck_macros = "*"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# lto = true
